Add nationality CRUD feature
