# internal/entity/nationality.go
@@ -1,0 +1,7 @@
+package entity
+
+type Nationality struct {
+	NationalityId   int
+	NationalityName string
+	NationalityCode string
+}
